# AntiCafe

./: .dockerignore  .env.example  .gitignore  Dockerfile  Insomnia_2022-10-05.json  Makefile  README.md  docker-compose.yml  openapi-schema.yml  pyproject.toml
backend/api/: admin.py  config.py  models.py  serializers.py  urls.py  views.py
backend/api/schema/: responses.py
backend/backend/: settings.py  urls.py
